# VTR-plugin

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  PROJECT-ROADMAP.md  README.md  checklist.md  progress-tracker.md  requirements-template.md  spec.md  test_features.cpp  test_features_flexible.cpp  test_vtr_model.cpp
Source/: FrequencyResponseDisplay.cpp  FrequencyResponseDisplay.h  LevelMeter.cpp  LevelMeter.h  MinimalEditor.cpp  MinimalEditor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  SpectrumDisplay.cpp  SpectrumDisplay.h
Source/DSP/: EQBand.cpp  EQBand.h  GainProcessor.cpp  GainProcessor.h
Source/Parameters/: ParameterManager.cpp  ParameterManager.h
Source/VTR/: EssentiaFeatureExtractor.cpp  EssentiaFeatureExtractor.h  ExternalFeatureExtractor.cpp  ExternalFeatureExtractor.h  FeatureExtractor.cpp  FeatureExtractor.h  FeatureExtractorFactory.cpp  FeatureExtractorFactory.h  PythonFeatureExtractor.cpp  PythonFeatureExtractor.h  VTRNetwork.cpp  VTRNetwork.h
agent/: 1-juce-research.md  2-juce-specification.md  3-juce-checklist.md  4-juce-build.md  PROJECT-ROADMAP.md  integrate-plan-checklist.md  progress-tracker.md  requirements-template.md
docs/: PROJECT-FINAL-SUMMARY.md  step-1-explanation.md  step-1-implementation-plan.md  step-1-requirements.md  step-2-explanation.md  step-2-implementation-plan.md  step-2-requirements.md  step-3-explanation.md  step-3-implementation-plan.md  step-3-requirements.md  step-4-explanation.md  step-4-implementation-plan.md  step-4-requirements.md  step-5-explanation.md  step-5-implementation-plan.md  step-5-requirements.md  step-7-explanation.md  step-7-implementation-plan.md  step-7-requirements.md  step-8-explanation.md  step-8-implementation-plan.md  step-8-requirements.md  step-9-explanation.md  step-9-implementation-plan.md  step-9-requirements.md
research/: EQ-ML-Integration-Research.md  open_source.md  papers.md  simplified_implementation.md  summary.md  tutorials.md
standalone_extractor/: CROSS_PLATFORM_BUILD.md  README.md  build_simple.sh  feature_extractor.py  integration_example.md  migration_example.cpp  test_integration.cpp  vtr-feature-extractor.spec
tests/: test_essentia_validation.cpp  test_feature_storage.cpp  test_juce_dsp_pink_noise.cpp  test_pink_noise_processing.cpp  test_simple_pink_noise.cpp  test_vtr17_feature_validation.cpp  test_vtr18_network_validation.cpp  test_vtr19_end_to_end.cpp  test_vtr19_end_to_end_simple.cpp  test_vtr1_bands.cpp  test_vtr1_simple.cpp  test_vtr1_verify.cpp  test_vtr2_frequencies.cpp  test_vtr3_feature_extraction.cpp  test_vtr_network.cpp
vtr-model/: FEATURE_EXTRACTION_FIX_SUMMARY.md  analyze_librosa_params.py  debug_librosa.py  feature_comparison_results.md  model_export_script.py  nn.py  test.py  test_any_audio.py  test_essentia_comparison.py  test_feature_comparison.py
vtr-model/exported_model/: model_weights.json  scaler_params.json  test_vectors.json
